--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "*"
+        "laravel/ui": "^4.0"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
